# twentyc.rpc

./: CHANGELOG.md  CHANGELOG.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
Ctl/: config.yml
facsimile/: requirements-test.txt
src/twentyc/rpc/: client.py
tests/: test_client.py
twentyc/rpc/: __init__.py  client.py
