[tool.poetry]
name = "twentyc.rpc"
repository = "https://github.com/20c/twentyc.rpc"
readme = "README.md"
version = "0.4.0.1"
description = "client for 20c's RESTful API"
authors = [ "20C <code@20c.com>",]
license = "LICENSE"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License", 
  "Programming Language :: Python :: 3.6", 
  "Programming Language :: Python :: 3.7", 
  "Programming Language :: Python :: 3.8", 
  "Programming Language :: Python :: 3.9",
]

packages = [
    { include = "twentyc", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.6"
six = ">=1.10,<2.0"
requests = ">=2.10.0"

[tool.poetry.dev-dependencies]
# test
codecov = ">=2.0.5,<3"
coverage = ">=4.1,<5"
pytest = ">=2.9.2,<4"
pytest-cov = ">=2.3.0,<3"
tox = ">=2.3.1,<3"

# lint
bandit = "^1.6.2"
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"

# docs
markdown = "*"
markdown-include = ">=0.5,<1"
mkdocs = ">=1.0.0,<2.0.0"

# ctl
ctl = "^1.0.0"
jinja2 = "^2.11.2"
tmpl = "^0.3.0"

[tool.poetry.plugins."markdown.extensions"]
pymdgen = "pymdgen.md:Extension"

[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3